<resources>
	<string name="app_name">DailyFinance</string>
	<plurals name="remaining_days_text">
		<item quantity="one">(for %d day)</item>
		<item quantity="other">(for %d days)</item>
	</plurals>
	<string name="daily_money_text">Daily: %.2f € %s</string>
	<string name="total_money_text">Total: %.2f €</string>
	<string name="subtract_button_text">-</string>
	<string name="add_button_text">+</string>
	<string name="reset_button_text">Reset</string>
	<string name="money_amount_hint_text">Amount</string>
	<string name="bank_account_money_text">Bank account: %.2f €</string>
	<string name="end_of_last_month_text">End of last month:</string>
	<string name="euro_symbol">€</string>
	<string name="add_next_month_switch_text">Add next month</string>
</resources>